proxy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-loadbalancer
spec:
  selector:
      app: haproxy
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
      name: minecraft
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: unifi-http
    - protocol: TCP
      port: 8443
      targetPort: 8443
      name: unifi-https
    - protocol: TCP
      port: 54321
      targetPort: 54321
      name: lets-encrypt
    - protocol: TCP
      port: 8880
      targetPort: 8880
      name: unifi-guest-http
    - protocol: TCP
      port: 8843
      targetPort: 8843
      name: unifi-guest-https
